Add connection string

--- a/TaskMenager/appsettings.json
+++ b/TaskMenager/appsettings.json
@@ -6,4 +6,8 @@
     }
   },
   "AllowedHosts": "*"
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:DESKTOP-PK3K361\\SQLEXPRESS;Database=TaskMenagerDB;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
