--- a/TaskMenager/appsettings.json
+++ b/TaskMenager/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
 
   "ConnectionStrings": {
     "DefaultConnection": "Server:DESKTOP-PK3K361\\SQLEXPRESS;Database=TaskMenagerDB;Trusted_Connection=True;TrustServerCertificate=True"
