--- a/TaskMenager/appsettings.json
+++ b/TaskMenager/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server:DESKTOP-PK3K361\\SQLEXPRESS;Database=TaskMenagerDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-PK3K361\\SQLEXPRESS;Database=TaskMenagerDB;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
