--- a/TaskMenager/TaskMenager.csproj
+++ b/TaskMenager/TaskMenager.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -14,5 +14,12 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TaskMenagerUtility\TaskMenagerUtility.csproj" />
+    <ProjectReference Include="..\TaskMenagerModels\TaskMenagerModels.csproj" />
+	  <ProjectReference Include="..\DataAccess\DataAccess.csproj" />
+  </ItemGroup>
+
 
 </Project>
